--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,8 +8,7 @@
 <body>
 <h1>Welcome to...</h1>
 
-<img src="../static/images/PizzaCloud.png" width="1000" th:src="@{images/PizzaCloud.png}"/>
-
+<img th:src="@{/images/PizzaCloud.png}" width="800"/>
 
 </body>
 </html>
