--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,10 +3,11 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Pizza Cloud</title>
+
 </head>
 
 <body>
-<h1>Register</h1>
+<h1>Registration</h1>
 
 <img th:src="@{/images/PizzaCloud.png}" width="800"/>
 
