--- a/pizzacloud/restclient/src/main/resources/templates/orderForm.html
+++ b/pizzacloud/restclient/src/main/resources/templates/orderForm.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<form method="POST" th:action="@{/orders}" th:object="${pizzaOrder}">
+<form method="POST" th:action="@{/orders}" th:object="${order}">
     <h1> Order your pizza creations!</h1>
 
     <img th:src="@{/images/PizzaCloud.png}" width="800"/>
@@ -15,7 +15,7 @@
     <h3>Your pizza in this order:</h3>
     <a th:href="@{/design}" id="another">Design another pizza</a><br/>
     <ul>
-        <li th:each="pizza : ${pizzaOrder.pizzas}">
+        <li th:each="pizza : ${order.pizzas}">
             <span th:text="${pizza.name}"> Pizza name</span>
         </li>
     </ul>
